feat: refactor working times - implement update and delete endpoints for working times - bind working times to account instead of user - add api-tests
