# backend/src/main/java/de/goaldone/backend/entity/UserAccountEntity.java
@@ -6,6 +6,7 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 
 import java.time.Instant;
+import java.util.List;
 import java.util.UUID;
 
 @Entity
@@ -31,4 +32,7 @@ public class UserAccountEntity {
 
     @Column(name = "last_seen_at")
     private Instant lastSeenAt;
+
+    @OneToMany(mappedBy = "userAccount", cascade = CascadeType.ALL, orphanRemoval = true)
+    private List<WorkingTimeEntity> workingTimes;
 }
